<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Supervisor</string>
    <string name="search_hint">Szukaj</string>
    <string name="synchronise_title">synchronizuj</string>
    <string name="dialog_text">Rozpoczęto synchronizację…</string>
    <string name="permission_description">Aktualizowanie stanu zadań</string>
    <string name="permission_label">Aktualizacje zadań</string>
    
    <string name="task_state_current">Aktywne</string>
    <string name="task_state_done">Wykonane</string>
    <string name="too_far">Jesteś za daleko aby zakończyć zadanie</string>
    
    <string name="taskList">Lista zadań</string>
    <string name="username_title">Nazwa użytkownika</string>
    <string name="username_hint">Wprowadź nazwę użytkownika</string>
    <string name="password_title">Hasło</string>
    <string name="password_hint">Wprowadź hasło użytkownika</string>
    <string name="server_url_title">Adres URL serwera</string>
    <string name="server_url_hint">Wprowadź adres serwera</string>
    <string name="sync_pref_title">Automatyczna synchronizacja zadań</string>
    <string name="preferences_menu_title">Ustawienia</string>
    <string name="preferences_menu_screen_title">Ustawienia Supervisor</string>
    <string name="sync_pref_title_short">Synchronizacja</string>
    <string name="username_pref_key">username</string>
    <string name="password_pref_key">password</string>
    <string name="server_pref_key">server</string>
    <string name="sync_pref_key">sync</string>
    <string name="sync_status_bar_txt">Synchronizacja…</string>
    <string name="sync_notification_title">Supervisor</string>
    <string name="sync_notification_body">Synchronizuję…</string>
    <string name="sync_status_bar_txt_error">Supervisor: Wystąpił błąd</string>
    <string name="sync_notification_body_err">Nieprawidłowe dane użytkownika</string>
    <string name="sync_notification_body_ser_err">Nie odnaleziono serwera</string>
    <string name="sync_notification_body_ser_err_500">Wystąpił błąd serwera</string>
    <string name="sync_notification_changes">Zmieniono: </string>
    <string name="dialog_text_no_network">Brak połączenia z Internetem</string>
    <string name="no_config">Witamy. Wprowadź ustawienia połączenia.</string>
    <string name="subtitle_active_task">Aktywne zadanie</string>
    <string name="subtitle_tasks_list">Lista zadań</string>
    <string name="subtitle_task_archive">Archiwum zadań</string>
    <string name="subtitle_time">Czas pracy</string>
    <string name="menu_task_done">Oznacz jako zakończone</string>
    <string name="menu_task_current">Rozpocznij to zadanie</string>
    <string name="main_screen_map">Mapa</string>
    <string name="task_details">Wyświetl szczegóły</string>
    <string name="task_details_title">Szczegóły</string>
    <string name="hint">Szukaj</string>
    <string name="gps_info">Czy chcesz włączyć GPS? 
        Twoja pozycja będzie dokładniejsza kosztem większego zużycia energii. 
        Możesz zmienić to później w: 
        Ustawienia > Lokalizacja i zabezpieczenia > Użyj satelitów GPS</string>
</resources>
